# efficient-dl-systems

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
week01_intro/: README.md  seminar.ipynb
week02_distributed/: README.md  practice.ipynb
week02_fast_pipelines/: README.md
week02_management_and_testing/: README.md
week02_management_and_testing/example_project/: compute_metrics.py  dvc.yaml  hparams.py  prepare_data.py  pyproject.toml  test_basic.py  train.py
week03_data_parallel/: README.md  practice.ipynb
week03_fast_pipelines/: README.md  requirements.txt
week04_data_parallel/: README.md
week04_distributed/: .~lock.slides.odp#  README.md  (+2 more)
week06_dl_arithmetic/homework/: README.md  config.py  efficient_train.py  pyproject.toml  train.py
week06_dl_arithmetic/homework/calculators/: base.py  baseline_calculator.py  efficient_calculator.py
week06_dl_arithmetic/homework/efficient_model/: __init__.py  attention.py  loss.py  norm.py  swiglu.py  transformer.py
week06_dl_arithmetic/homework/efficient_optimizer/: ademamix.py
week06_dl_arithmetic/homework/model/: __init__.py  attention.py  loss.py  norm.py  swiglu.py  transformer.py
week06_dl_arithmetic/homework/optimizer/: ademamix.py
week06_dl_arithmetic/homework/tests/: bench_e2e.py  conftest.py  test_attention.py  test_e2e.py  test_loss.py  test_optimizer.py  test_rmsnorm.py  test_swiglu.py
week07_application_deployment/00_basics/non-smokers-repo/: Dockerfile.good  README.md  docker-compose.yml  pyproject.toml  pytest.ini
week07_application_deployment/00_basics/non-smokers-repo/app/: config.py  main.py  model.py
week07_application_deployment/00_basics/non-smokers-repo/tests/: conftest.py  test_health.py  test_model.py
(+295 files in other folders)
