[project]
name = "non-smokers-repo"
version = "0.1.0"
description = "Production-oriented seminar demo service"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "pytest-cov>=7.0.0",
  "ty>=0.0.18",
  "uvicorn>=0.30.0",
  "redis>=5.0.8",
]

[dependency-groups]
dev = [
  "pytest==8.3.3",
  "httpx>=0.27.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
